feat:公共字段自动填充、图片上传

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,6 @@ sky:
     database: sky_take_out
     username: root
     password: qwer
+  alioss:
+    endpoint: https://oss-cn-guangzhou.aliyuncs.com
+    bucketName: java--web-learning
