--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
       username: ${sky.datasource.username}
       password: ${sky.datasource.password}
   redis:
-    # 配置Spring Data Redis    注意要写在spring下
+    # 配置Spring Data Redis
     host: ${sky.redis.host}
     port: ${sky.redis.port}
     password: ${sky.redis.password}
@@ -36,19 +36,20 @@ logging:
         controller: info
 
 sky:
+  # jwt配置信息
   jwt:
     # 设置jwt签名加密时使用的秘钥
-    admin-secret-key: itcast
-    # 设置jwt过期时间
+    admin-secret-key: ${sky.jwt.admin-secret-key}
+    # 过期时间
     admin-ttl: 9600000
-    # 设置前端传递过来的令牌名称
+    # 前端传递过来的令牌名称
     admin-token-name: token
     # 设置user的jwt配置  注意admin跟user用的是两套jwt配置
-    user-secret-key: itcast
+    user-secret-key: ${sky.jwt.user-secret-key}
     user-ttl: 9600000
     # token的名字是跟前端规定好的
     user-token-name: authentication
-  # 配置微信开发者的相关信息
+  # 微信开发者相关信息
   wechat:
     appid: ${sky.wechat.appid}
     secret: ${sky.wechat.secret}
