--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 
 spring:
   profiles:
-    active: dev
+    active: dev #激活-dev配置文件
   main:
     allow-circular-references: true
   datasource:
